--- a/testprovider/lib/l10n/app_ar.arb
+++ b/testprovider/lib/l10n/app_ar.arb
@@ -1,21 +1,35 @@
 {
-    "lg": "اللغة",
-    "ar": "العربية",
-    "en": "الانجليزية",
-    "selectLg": "اختار اللغة المناسبة",
-    "theme": "المظهر",
-    "dark": "ليلي",
-    "light": "فاتح",
-    "profile":"الملف الشخصي",
-    "settings": "الاعدادات",
-    "home":"الرئيسية",
-    "map":"الخريطة",
-    "fav":"المفضلة",
-    "welcome_back": "مرحبًا بعودتك",
-    "le":"AR",
-    "location":"طولكرم,فلسطين",
-    "all":"الكل",
-    "sport": "الرياضة ",
-    "bday":"يوم ميلاد",
-    "meetings":"اجتماعات"
+  "lg": "اللغة",
+  "ar": "العربية",
+  "en": "الانجليزية",
+  "selectLg": "اختار اللغة المناسبة",
+  "theme": "المظهر",
+  "dark": "ليلي",
+  "light": "فاتح",
+  "profile": "الملف الشخصي",
+  "settings": "الاعدادات",
+  "home": "الرئيسية",
+  "map": "الخريطة",
+  "fav": "المفضلة",
+  "welcome_back": "مرحبًا بعودتك",
+  "le": "AR",
+  "location": "طولكرم,فلسطين",
+  "all": "الكل",
+  "sport": "الرياضة ",
+  "bday": "يوم ميلاد",
+  "meetings": "اجتماعات",
+  "addEvent": "اضف حدث",
+  "event_time": "وقت الحدث",
+  "choose_time": "اختيار الوقت",
+  "event_date": "تاريخ الحدث",
+  "choose_date": "اختيار التاريخ",
+  "event_description": "وصف الحدث",
+  "event_title": "عنوان الحدث",
+  "title": "عنوان",
+  "add_event": "إضافة الحدث",
+  "choose_event_location": "اختيار موقع الحدث",
+  "search_for_event": "البحث عن الحدث",
+  "enter_email": "أدخل بريدك الإلكتروني",
+  "enter_password": "أدخل كلمة المرور",
+  "login": "تسجيل الدخول"
 }
